# nuvolaris

./: .devcontainer.json  .env  .env.sample  .gitignore  .gitmodules  .licenserc.yaml  .pdm.toml  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  DEVEL.md  Dockerfile  Dockerfile.post  Dockerfile.pre  LICENSE  Matrix.md  Neo.md  OWNERS.md  README.md  ROADMAP.md  Taskfile.yml  TaskfileBuild.yml  TaskfileDev.yml  TaskfileTest.yml  aliases  cisetup.sh  cleanup.sh  cloud-init.yaml  cron.sh  dbinit.sh  detect.sh  docker-noroot-proxy.sh  get-diff.sh  gitconfig  init-with-audit.sh  init.sh  init.src  kind.sh  multipass.sh  nuv.src  (+21 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/: cidownload.sh  cisetup.sh  debug-github-actions.sh  kind.yaml  wait.sh
.obsidian/: hotkeys.json  workspace
actions/: Taskfile.yml
clusters/: Taskfile.yml  aks.yml  eks-cluster.yml  eks.yml  gke.yml  juju-aws-overlay.yaml  juju.yml  kind-config.yaml  kind.yml  lks.yml  microk8s.cf  microk8s.yml  openshift-install-config.yaml  openshift-user.yaml  openshift.yml
demo/: Taskfile.yml  aliases  crd.yaml
deploy/: Taskfile.yml  crd.yaml  ns.yaml  obj.yaml
docs/: BUILD.md  CONTRIBUTING.md  DEVEL.md  Matrix.md  Morpheus.md  Neo.md  OVERVIEW.md  OWNERS.md  QUICK.md  ROADMAP.md  Trinity.md  nuvolaris.excalidraw
lab/: demo-crd.yaml  demo-deployment.yaml  demo-ns.yaml  demo-obj.yaml  demo1.py  demo2.py  demomock.py  kustomization.yaml  kustomization1.yaml  obj.yaml  patch.yaml  transcript.txt
nuvolaris/: __init__.py  actionexecutor.py  bucket.py  config.py  controller-pod.yaml  couchdb-init-job.yaml  (+22 more)
(+211 files in other folders)
